# crabiverse

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/2022-12-05-131554_create_posts_table/: up.sql
src/: main.rs
src/config/: mod.rs
src/database/: mod.rs  models.rs  schema.rs
src/handlers/: mod.rs
